🐝 fix: same margin between category page and transaction page = no jump when changing

--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -3,7 +3,7 @@
 .CategoriesHeader
     display flex
     justify-content space-between
-    align-items center
+    align-items flex-start
     margin-bottom 1.5rem
 
     +small-screen()
